--- a/differentStyles.html
+++ b/differentStyles.html
@@ -14,7 +14,7 @@
 <p style="font-size:160%;">This is a paragraph.</p>
 <h1 style="text-align:center;">Centered Heading</h1>
 <p style="text-align:center;">Centered paragraph.</p>
-
+<!--comment-->
 </body>
 </html>
 
