--- a/CssPractice.html
+++ b/CssPractice.html
@@ -1,21 +1,3 @@
-<!--Inlie Css:
-<!DOCTYPE html>
-<html>
-<body>
-
-<h1 style="color:blue;">A Blue Heading</h1>
-
-<p style="color:red;">A red paragraph.</p>
-
-</body>
-</html>
--->
-
-
-
-
-
-<!--Internal CSS:
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,77 +5,12 @@
 body {background-color: powderblue;}
 h1   {color: blue;}
 p    {color: red;}
+
 </style>
 </head>
 <body>
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
--->
-
-
-
-
-
-<!--
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
-
-
-And is connected to the styles.css which looks like this:
-body {
-  background-color: powderblue;
-}
-h1 {
-  color: blue;
-}
-p {
-  color: red;
-}
--->
-
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-h1 {
-  color: blue;
-  font-family: verdana;
-  font-size: 300%;
-}
-p {
-  color: red;
-  font-family: courier;
-  font-size: 160%;
-}
-p {
-  border: 2px solid powderblue;
-}
-p {
-  border: 2px solid powderblue;
-  padding: 30px;
-}
-p {
-  border: 2px solid powderblue;
-  margin: 50px;
-}
-</style>
-</head>
-<body>
-
+<!--Internal Css where all headings are blue and all paragraphs are red unless 
+otherwise specified in the heading/paragraph attributes.-->
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 
